# rust-protobuf

./: .travis.yml  Cargo.toml
src/: rebuild.sh  regenerate.sh  test.sh
src/lib/protobuf/: Cargo.toml  protobuf.rs
src/lib/protobuf3/: Cargo.toml
src/perftest/: Cargo.toml
src/test/: test.rs
