[package]

name = "rust-protobuf"
version = "1.0.23"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
description = """
Rust implementation of Google protocol buffers
"""

[features]
default = ["protobuf"]
pb = ["protobuf"]
pb3 = ["protobuf3"]

[dependencies]
protobuf = { path = "src/lib/protobuf", optional = true }
protobuf3 = { path = "src/lib/protobuf3", optional = true }

[[bin]]

name = "protoc-gen-rust"
path = "src/protoc-gen-rust.rs"
test = false

[[bin]]

name = "protobuf-bin-gen-rust-do-not-use"
path = "src/protobuf-bin-gen-rust-do-not-use.rs"
test = false

