[project]
name = "rust-protobuf-perftest"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]

[features]
default = ["protobuf"]
pb = ["protobuf"]
pb3 = ["protobuf3"]

[dependencies]
protobuf = { path = "../lib/protobuf", optional = true }
protobuf3 = { path = "../lib/protobuf3", optional = true }
rand = "0.3.14"
time = "0.1.35"

[[bin]]

name = "rust-protobuf-perftest"
path = "perftest.rs"
test = false
