[package]

name = "protobuf"
version = "1.0.23"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
description = """
Rust implementation of Google protocol buffers (version 2)
"""

[lib]
name = "protobuf"
path = "protobuf.rs"

