[package]

name = "protobuf3"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
description = """
Rust implementation of Google protocol buffers (version 2)
"""

[lib]
name = "protobuf3"
path = "protobuf3.rs"

